fixing wrong result desplay and improving responsive result enter mask (on mobile), event-home (on very large screen),

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -35,6 +35,11 @@
                 grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
             }
 
+            @include respond(large) {
+                row-gap: 1rem;
+            }
+
+
             & rs-carousel {
                 width: 100%;
                 max-width: 100%;
